<resources>
    <string name="app_name">Gawana</string>
    <string name="tel">tel:</string>
    <string name="lbl_cancel_trip">Cancel Trip</string>
    <string name="lbl_begin_trip">Begin Trip</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_end_trip">End trip</string>
    <string name="lbl_contiune">Continue</string>
    <string name="lbl_arrived">Arrived</string>
    <string name="lbl_paypal">PayPal</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_credit_cart_infomation">Credit cart information</string>
    <string name="lbl_redit_cart">Credit Cart</string>
    <string name="lbl_secure_code">Secure Code</string>
    <string name="lbl_rating_driver">Your trip get</string>
    <string name="lbl_trip_passenger">Your trip need</string>
    <string name="lbl_id_driver">Id Driver</string>
    <string name="lbl_name_passenger">Passenger Driver</string>
    <string name="lbl_rate">Rate</string>
    <string name="lbl_start">Start:</string>
    <string name="lbl_end">End:</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_pass_profile">Passenger Profile</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_car_plate">Car plate</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_phone_passenger">Passenger phone</string>
    <string name="lbl_promotion">Promotion</string>
    <string name="lbl_trip_history">Trip histories</string>
    <string name="lbl_order_confirm">Order Confirmed</string>
    <string name="lbl_payment_history">Histories</string>
    <string name="lbl_payment_transfer">Select Account</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_rate_menu">Rate</string>
    <string name="lbl_help">Report Trip Incident</string>
    <string name="lbl_title_start_trip">Start trip now</string>
    <string name="lbl_title_your_trip">Your trip</string>
    <string name="lbl_online">Offer A Ride</string>
    <string name="lbl_register_as_driver">Register as driver</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_request_car">Request Car</string>
    <string name="lbl_find_car">Find 5 car in 3.000m radius</string>
    <string name="btn_book">Book</string>
    <string name="btn_next">Next</string>
    <string name="lbl_from">From:</string>
    <string name="lbl_to">To:</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_google">Google Plus</string>
    <string name="lbl_share_speak">Share to get 50 points as a bonus</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_you_can_login">Or login</string>
    <string name="lbl_Facebook_Google">with Facebook, Google+</string>
    <string name="lbl_payout">Payout</string>
    <string name="lbl_avatar">Avatar</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_request_link1">Request Link II</string>
    <string name="lbl_guide">You can sign up seats corresponding to the number of people traveling with you</string>
    <string name="lbl_comment">Below is a list of those websites from the top 150 most popular travel blogs that use Comment Luv. I hope that this will be a useful resource for travel bloggers because from experience I know that using Comment Luv makes it more likely that people will visit your site</string>
    <string name="lbl_roundtrip">Round Trip</string>
    <string name="lbl_departuredate">Departure Date</string>
    <string name="lbl_returndate">Return Date</string>
    <string name="msg_quit_app">Do you want to quit app?</string>
    <string name="msg_offline">Do you want to offline?</string>
    <string name="msg_do_you_cancel">Do you want to cancel</string>
    <string name="msg_check_net_work">Please check the network!</string>
    <string name="lbl_english">English</string>
    <string name="lbl_chinese">中文</string>
    <string name="content_description">Content Description</string>
    <string name="fa_calendar_o">&#xf133;</string>
    <string name="fa_user_secret">&#xf21b;</string>
    <string name="fa_credit_card">&#xf09d;</string>
    <string name="ic_star">&#xf005;</string>
    <string name="ic_user">&#xf007;</string>
    <string name="ic_home">&#xf015;</string>
    <string name="ic_payment">&#xf0d6;</string>
    <string name="ic_promotion">&#xf0a3;</string>
    <string name="ic_share">&#xf1e0;</string>
    <string name="ic_help">&#xf1cd;</string>
    <string name="ic_history">&#xf1da;</string>
    <string name="ic_online">&#xf0eb;</string>
    <string name="ic_register_as_driver">&#xf1ba;</string>
    <string name="ic_language">&#xf1ab;</string>
    <string name="ic_phone">&#xf10b;</string>
    <string name="ic_rate">&#xf012;</string>
    <string name="ic_menu">&#xe636;</string>
    <string name="ic_facebook">&#xf09a;</string>
    <string name="ic_google">&#xf0d5;</string>
    <string name="ic_search">&#xe618;</string>
    <string name="ic_note">&#xf0f6;</string>
    <string name="ic_dolar"> &#xf155;</string>
    <string name="ic_length">&#xf07e;</string>
    <string name="ic_blance">&#xf19c;</string>
    <string name="ic_point">&#xf1c4;</string>
    <string name="ic_save">&#xe65f;</string>
    <string name="ic_photo">&#xf03e;</string>
    <string name="ic_avatar">&#xf234;</string>
    <string name="ic_model">&#xf091;</string>
    <string name="ic_year">&#xf073;</string>
    <string name="ic_mail">&#xf003;</string>
    <string name="ic_add">&#xf196;</string>
    <string name="ic_brand">&#xf000;</string>
    <string name="ic_money">&#xf0d6;</string>
    <string name="ic_logout">&#xf011;</string>
    <string name="ic_cycle">&#xf111;</string>
    <string name="ic_phone_update">&#xf095;</string>
    <string name="ic_bag">&#xf0b1;</string>
    <string name="ic_time">&#xf273;</string>
    <string name="ic_change">&#xf0ec;</string>
    <string name="ic_sliders">&#xf1de;</string>
    <string name="ic_questions">&#xf1d7;</string>
    <string name="ic_map">&#xf279;</string>
    <string name="ic_clock">&#xf017;</string>
    <string name="ic_next">&#xf064;</string>
    <string name="lbl_link1">1 seat avaiable (Link I)</string>
    <string name="lbl_link2">2 seat avaiable (Link II)</string>
    <string name="lbl_link3">3 seat avaiable (Link III)</string>
    <string name="lbl_request_link">YOUR REQUEST LINK I HAS BEEN SENT</string>
    <string name="lbl_you_are_now_online">You are now online</string>
    <string name="lbl_waiting_for_request">Awaiting for LINK request</string>
    <string name="lbl_awaiting">awaiting for driver confirmation</string>
    <string name="lbl_please">Please wait</string>
    <string name="lbl_please_wait_ten">(for demo please wait in 10 seconds)</string>
    <string name="btn_cancel_trip">CANCEL TRIP</string>
    <string name="lbl_offline">Offline</string>
    <string name="lbl_header_start_trip">your driver is arrived</string>
    <string name="lbl_header_trip_online">Begin your trip</string>
    <string name="ic_gps">&#xe6bb;</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_brand_car">Brand of car</string>
    <string name="lbl_year_manufacturer">Year manufacturer</string>
    <string name="lbl_model_car">Model of Car</string>
    <string name="lbl_header_trip_history">your driver is detail trip</string>
    <string name="lbl_trip_detail">your trip detail</string>
    <string name="lbl_choose_profile">Choose a profile photo</string>
    <string name="lbl_header_driver_start_trip">Your driver arrives</string>
    <string name="lbl_show_passenger">Please go ahead to your passenger location</string>
    <string name="lbl_your_end_trip">Your trip is end</string>
    <string name="lbl_rating">Rating driver</string>
    <string name="lbl_rating_link">Rating</string>
    <string name="lbl_starting_location">Start</string>
    <string name="lbl_ending_location">End</string>
    <string name="lbl_starting_location2">25 Los Angeles, America </string>
    <string name="lbl_ending_location2">117 Los Angeles, American</string>
    <string name="ic_twitter">&#xf173;</string>
    <string name="ic_paypal">&#xf1ed;</string>
    <string name="lbl_rating_passenger">Rating passenger</string>
    <string name="lbl_enter_code">Please enter the 4 digit code you received by SMS</string>
    <string name="lbl_edit_phonenumber">Edit your profile to add your phone number</string>
    <string name="lbl_infomation">I have read and accpect the TCs and certify that I am over 18 years old , hold a driving licence and have valid car insurance</string>
    <string name="pe_7s_map_marker">&#xe638;</string>
    <string name="pe_7s_menu">&#xe636;</string>
    <string name="ic_back">&#xe6a2;</string>
    <string name="user_name">Steve Kwok Wah Au</string>
    <string name="points">Points: 10000</string>
    <string name="name">John doe</string>
    <string name="taxi_driver">Taxi driver</string>
    <string name="a_123">A123 546 897</string>
    <string name="car_plate">29A - 8888</string>
    <string name="rate">5</string>
    <string name="phone">0987654321</string>
    <string name="start_a">A point</string>
    <string name="start_b">B point</string>
    <string name="lbl_passenger">passenger</string>
    <string name="lbl_passenger2">passenger2</string>
    <string name="lbl_passenger_name">Passenger Name</string>
    <string name="lbl_twitter">Twitter</string>
    <string name="lbl_recharge_via_paypal">Recharge via paypal</string>
    <string name="lbl_transfers">Transfer</string>
    <string name="lbl_request_conversion_point">Request conversion point</string>
    <string name="lbl_total_point">Total Point</string>
    <string name="btnRequest">Request</string>
    <string name="lbl_point_number">Point Number</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_conversion_point">Conversion point</string>
    <string name="lbl_conversion_point_number">Conversion point number:</string>
    <string name="lbl_point_max">Point max:</string>
    <string name="lbl_numberpoint">100</string>
    <string name="lbl_maxpoint">1000</string>
    <string name="lbl_title_dialog">Invites you to enter the number of points</string>
    <string name="lbl_number_transfer">Enter number transfers</string>
    <string name="lbl_note">1 HKD = 1 Point</string>
    <string name="lbl_updateprofile">Update Profile</string>
    <string name="model">R8 Black</string>
    <string name="brand">Audi</string>
    <string name="year">2010</string>
    <string name="address">Los Angeles, American</string>
    <string name="email">fruity@gmail.com</string>
    <string name="lbl_transaction_id">Trip Id</string>
    <string name="lbl_driver_history">Name Driver</string>
    <string name="lbl_to_history">End Time</string>
    <string name="lbl_from_history">Start Time</string>
    <string name="lbl_destination_history">Destination</string>
    <string name="lbl_place_history">Departure</string>
    <string name="lbl_date_history">Date</string>
    <string name="lbl_total_history">Total</string>
    <string name="lbl_total_time_history">Time</string>
    <string name="lbl_total_length_history">Length</string>
    <string name="lbl_total_point_history">Total Point</string>
    <string name="lbl_trip_status">Trip Status</string>
    <string name="demo_id_history">#123</string>
    <string name="demo_date">8:30, 22/6/2015</string>
    <string name="demo_time">1</string>
    <string name="demo_length">40</string>
    <string name="demo_place">Michigan Ave</string>
    <string name="demo_destination">Union Pacific</string>
</resources>