<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_header"
    android:background="@color/background_findcar"
    android:orientation="horizontal" >

    <com.pt.taxi.widget.TextViewPixeden
        android:layout_width="@dimen/width_menu"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/lbl_description"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_small"
        android:text="@string/ic_menu"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title" />

    <com.pt.taxi.widget.TextViewRaleway
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lbl_request_car"
        android:textColor="@color/white" />

</LinearLayout>