<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/space_tiny"
    android:paddingLeft="@dimen/space_tiny"
    android:paddingRight="@dimen/space_tiny"
    android:background="@color/white"
    android:orientation="vertical" >

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3" >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_transaction_id"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView 
               android:id="@+id/txtTripId"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textColor="@color/black"
               android:gravity="center_vertical|right"
               android:text="2343"/>
           
			
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_driver_history"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView 
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="Mack Jone (A4329 38252)"
                android:gravity="center_vertical|right"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_from_history"
                android:textColor="@color/black"
                android:textStyle="bold"/>
			
	            <TextView 
	               android:id="@+id/txtTimeFrom"
	               android:layout_width="match_parent"
	               android:layout_height="wrap_content"
	               android:layout_weight="1"
	               android:textColor="@color/black"
	               android:text="@string/demo_date"
	               android:gravity="center_vertical|right"/>
			
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_to_history"
                android:textColor="@color/black"
                android:textStyle="bold"/>
	            <TextView 
	               android:id="@+id/txtTimeTo"
	               android:layout_width="match_parent"
	               android:layout_height="wrap_content"
	               android:layout_weight="1"
	               android:textColor="@color/black"
	               android:text="@string/demo_date"
	               android:gravity="center_vertical|right"/>

        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_place_history"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView 
                android:id="@+id/txtPlaceGo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/demo_place"
                android:gravity="center_vertical|right"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_destination_history"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView 
                android:id="@+id/txtDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/demo_destination"
                android:gravity="center_vertical|right"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_total_history"
            android:orientation="horizontal"
            android:weightSum="3"
            android:paddingTop="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small" >
            <TextView 
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/demo_time"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_xlarge"/>
            <TextView 
                android:id="@+id/txtLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:text="@string/demo_length"
                android:textSize="@dimen/text_size_xlarge"/>

           <TextView
               android:id="@+id/txtTotalTime"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="60"
               android:gravity="center_horizontal"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size_xlarge" />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_total_history"
            android:orientation="horizontal"
            android:weightSum="3"
            android:paddingBottom="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small" >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hour"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_normal"/>
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:text="Km"
                android:textSize="@dimen/text_size_normal"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="Points"
				android:gravity="center_horizontal"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

</LinearLayout>