<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_header"
        android:background="@color/white" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_header_image"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/img_taxi" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_header_image"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/img_header_above" />

        <com.pt.taxi.widget.CircleImageView
            android:layout_width="@dimen/profile_avartar_size"
            android:layout_height="@dimen/profile_avartar_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/profile_avartar_margin_top"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avartar" />

        <com.pt.taxi.widget.TextViewPixeden
            android:id="@+id/btnMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/pe_7s_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/space_large" />

        <com.pt.taxi.widget.TextViewRaleway
            android:id="@+id/lblTitle"
            style="@style/Layout.WrapWidthHeight"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_header"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_tiny"
                android:gravity="center"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/bluer_text"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold" />
			<LinearLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_gravity="center_horizontal">
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:layout_marginTop="@dimen/space_nano"
	                android:gravity="center"
	                android:text="Balance:"
	                android:textAllCaps="true"
	                android:textColor="@color/bluer_text"
	                android:textSize="@dimen/text_size_normal"
	                android:layout_marginRight="@dimen/margin_small"
	                android:textStyle="bold" />
	            <TextView
	                android:id="@+id/txtTotalPoint"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:layout_marginTop="@dimen/space_nano"
	                android:gravity="center"
	                android:text="3000"
	                android:textAllCaps="true"
	                android:textColor="@color/bluer_text"
	                android:textSize="@dimen/text_size_normal"
	                android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btnPayment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_horizontal_xxlarge"
                android:layout_marginRight="@dimen/margin_horizontal_xxlarge"
                android:layout_marginTop="@dimen/space_tiny"
                android:background="@drawable/bg_paypal_yl"
                android:gravity="center"
                android:text="@string/lbl_payment"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/btnPayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_horizontal_xxlarge"
                android:layout_marginRight="@dimen/margin_horizontal_xxlarge"
                android:layout_marginTop="@dimen/space_tiny"
                android:background="@drawable/bg_paypal_yl"
                android:gravity="center"
                android:text="@string/lbl_payout"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/btnTrasfers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_horizontal_xxlarge"
                android:layout_marginRight="@dimen/margin_horizontal_xxlarge"
                android:layout_marginTop="@dimen/space_tiny"
                android:background="@drawable/bg_paypal_yl"
                android:gravity="center"
                android:text="@string/lbl_transfers"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_horizontal_xxlarge"
                android:layout_marginRight="@dimen/margin_horizontal_xxlarge"
                android:layout_marginTop="@dimen/space_tiny"
                android:background="@drawable/bg_paypal_yl"
                android:gravity="center"
                android:text="@string/lbl_payment_history"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>