<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_vertical"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_nano" >

        <com.pt.taxi.widget.TextViewRaleway
            android:id="@+id/lblRequestLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_request_link1"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           	android:weightSum="4">

            <com.pt.taxi.widget.TextViewRaleway
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_rating_link"
                android:textColor="@color/black" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical|right"
                    android:orientation="horizontal" >

                    <com.pt.taxi.widget.TextViewFontAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/ic_star"
                        android:textColor="@color/yellow_dark"
                        android:textSize="@dimen/text_size_normal" />

                    <com.pt.taxi.widget.TextViewFontAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:background="@color/transparent"
                        android:text="@string/ic_star"
                        android:textColor="@color/yellow_dark"
                        android:textSize="@dimen/text_size_normal" />

                    <com.pt.taxi.widget.TextViewFontAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:background="@color/transparent"
                        android:text="@string/ic_star"
                        android:textColor="@color/yellow_dark"
                        android:textSize="@dimen/text_size_normal" />

                    <com.pt.taxi.widget.TextViewFontAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:background="@color/transparent"
                        android:text="@string/ic_star"
                        android:textColor="@color/yellow_dark"
                        android:textSize="@dimen/text_size_normal" />

                    <com.pt.taxi.widget.TextViewFontAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:background="@color/transparent"
                        android:text="@string/ic_star"
                        android:textColor="@color/yellow_dark"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>
          
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.pt.taxi.widget.TextViewRaleway
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_starting_location"
                android:textColor="@color/black" />

            <com.pt.taxi.widget.TextViewRaleway
                android:id="@+id/lblStartingLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/lbl_starting_location2"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.pt.taxi.widget.TextViewRaleway
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_ending_location"
                android:textColor="@color/black" />

            <com.pt.taxi.widget.TextViewRaleway
                android:id="@+id/lblEndingLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/lbl_ending_location2"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/transparent" />

</LinearLayout>